# DIANA-Architecture

./: .replit  LICENSE  LIMITATIONS.md  Makefile  README.md  pyproject.toml  replit.md
artifacts/synapse/: README.md  main.py  tasks.txt
artifacts/synapse/diana/: __init__.py  benchmark.py  benchmark_display.py  benchmark_engine.py  benchmark_tasks.py  chip_node.py  component.py  cpu_reporter.py  display.py  p2p_bus.py  phase5_display.py  phase5_runner.py  phase6_display.py  phase6_runner.py  scenario.py  visualizer.py  viz_engine.py
artifacts/synapse/synapse/: __init__.py  brain.py  core.py  display.py  healing.py  repl.py  rl_agent.py
benchmarks/: __init__.py  benchmark_suite.py  compare_results.py  report_generator.py  workloads.py
kernel/: .component_cache.o.cmd  .component_gpu.o.cmd  .component_ram.o.cmd  .component_ssd.o.cmd  .cpu_observer.o.cmd  .diana_core.mod.cmd  .diana_core.o.cmd  .diana_core_main.o.cmd  .modules.order.cmd  .p2p_bus.o.cmd  .synapse_chip.o.cmd  Kconfig  Makefile  component_cache.c  component_gpu.c  component_ram.c  component_ssd.c  cpu_observer.c  cpu_observer.h  diana_core.c  diana_core.mod  diana_core_main.c  modules.order  p2p_bus.c  p2p_bus.h  synapse_chip.c  synapse_chip.h
scripts/: build.sh  build_full.sh  make_iso.sh  make_usb.sh  run_benchmark.sh  run_qemu.sh  setup_wsl.sh  setup_wsl_kernel.sh  wsl_build.sh
synapse/: __init__.py  brain.py  rl_agent.py
synapse_cpp/: CMakeLists.txt  synapse_infer.cpp
tests/: test_integration.sh  test_kernel_module.sh  test_p2p_bus.sh  test_synapse.py
userspace/: diana_ctl.sh  diana_gui_server.py  diana_monitor.py  diana_trainer.py  diana_ui.py
userspace/gui/: app.js  boot.html  index.css  index.html
(+1 files in other folders)
